# agent-handoff-certified-mcp

./: .cursorrules  .gitignore  README.md  SECURITY.md  acp.json  glama.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_server.py
